src/video.h

    typedef cv::Ptr<cv::BackgroundSubtractorMOG2> *BackgroundSubtractorMOG2;
    typedef cv::Ptr<cv::BackgroundSubtractorKNN> *BackgroundSubtractorKNN;
    typedef cv::Ptr<cv::Tracker> *Tracker;
    typedef cv::Ptr<cv::TrackerMIL> *TrackerMIL;
    typedef cv::Ptr<cv::TrackerGOTURN> *TrackerGOTURN;
    typedef cv::KalmanFilter *KalmanFilter;
typedef void *BackgroundSubtractorMOG2;
typedef void *BackgroundSubtractorKNN;
typedef void *Tracker;
typedef void *TrackerMIL;
typedef void *TrackerGOTURN;
typedef void *KalmanFilter;
    void BackgroundSubtractorMOG2_Close(BackgroundSubtractorMOG2 b);
    void BackgroundSubtractorKNN_Close(BackgroundSubtractorKNN b);
    void TrackerMIL_Close(TrackerMIL self);
    void KalmanFilter_Close(KalmanFilter kf);