packages/dartcv/lib/src/g/video.g.dart


class _SymbolAddresses {
  final CvNativeVideo _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(BackgroundSubtractorKNNPtr)>>
      get BackgroundSubtractorKNN_Close =>
          _library._BackgroundSubtractorKNN_ClosePtr;
  ffi.Pointer<
          ffi.NativeFunction<ffi.Void Function(BackgroundSubtractorMOG2Ptr)>>
      get BackgroundSubtractorMOG2_Close =>
          _library._BackgroundSubtractorMOG2_ClosePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(KalmanFilterPtr)>>
      get KalmanFilter_Close => _library._KalmanFilter_ClosePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(TrackerMILPtr)>>
      get TrackerMIL_Close => _library._TrackerMIL_ClosePtr;
}

final class BackgroundSubtractorKNN extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef BackgroundSubtractorKNNPtr = ffi.Pointer<BackgroundSubtractorKNN>;

final class BackgroundSubtractorMOG2 extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef BackgroundSubtractorMOG2Ptr = ffi.Pointer<BackgroundSubtractorMOG2>;
typedef CvRect = imp1.CvRect;
typedef CvSize = imp1.CvSize;
typedef CvStatus = imp1.CvStatus;

final class KalmanFilter extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef KalmanFilterPtr = ffi.Pointer<KalmanFilter>;
typedef Mat = imp1.Mat;
typedef TermCriteria = imp1.TermCriteria;

final class Tracker extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

final class TrackerGOTURN extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef TrackerGOTURNPtr = ffi.Pointer<TrackerGOTURN>;

final class TrackerMIL extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef TrackerMILPtr = ffi.Pointer<TrackerMIL>;
typedef TrackerPtr = ffi.Pointer<Tracker>;
typedef VecF32 = imp1.VecF32;
typedef VecPoint2f = imp1.VecPoint2f;
typedef VecUChar = imp1.VecUChar;
